--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Nick Sposa</title>
-  <link rel="stylesheet" href="C:\Users\HR_Laptop_1\Desktop\CSS-My Site\css\styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="https://img.icons8.com/dusk/64/000000/user.png" type="image">
   <link href="https://fonts.googleapis.com/css?family=Baskervville|Montserrat|Sacramento&display=swap" rel="stylesheet">
 </head>
