--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   </div>
   <div class="top-container">
-    <img src="C:\Users\HR_Laptop_1\Desktop\CSS-My Site\images\cloud.png" class="cloud1">
+    <img src="cloud.png" class="cloud1">
     <h1>I'm Nick</h1>
     <h2>a <span class="pro">pro</span>grammer</h2>
     <img src="C:\Users\HR_Laptop_1\Desktop\CSS-My Site\images\cloud.png" class="cloud">
