--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <img src="cloud.png" class="cloud1">
     <h1>I'm Nick</h1>
     <h2>a <span class="pro">pro</span>grammer</h2>
-    <img src="C:\Users\HR_Laptop_1\Desktop\CSS-My Site\images\cloud.png" class="cloud">
-    <img src="C:\Users\HR_Laptop_1\Desktop\CSS-My Site\images\mountain.png" class="mountain">
+    <img src="cloud.png" class="cloud">
+    <img src="mountain.png" class="mountain">
   </div>
 
 
@@ -37,7 +37,7 @@
       <hr>
       <div class="skills">
         <div class="skill-row">
-          <img class="mypic" src="C:\Users\HR_Laptop_1\Desktop\CSS-My Site\images\nickpic.png">
+          <img class="mypic" src="nickpic.png">
 
           <h2>About</h2>
           <p>I'm a confessed life-long learner and autodidact. Initially, I started my journey outside of academia, in the field of value Investing. While mastery has and will continue to be evasive, value investing is an area I will work on
@@ -52,18 +52,18 @@
 
           <div class="skill-row2">
           <h2>My Skills</h2>
-            <img src="C:\Users\HR_Laptop_1\Desktop\CSS-My Site\images\invest.png"class="stocks">
+            <img src="invest.png"class="stocks">
             <br>
             <h3>Equity Research</h3>
             <p>A great deal of my time is spent doing exhaustive research on a small portion of the public equity market.
               My concentration lies in the area of franchise businesses and company's with large proverbial MOATS.</p>
             <br>
-            <img src="C:\Users\HR_Laptop_1\Desktop\CSS-My Site\images\webdevpic.png"class="stocks">
+            <img src="webdevpic.png"class="stocks">
             <h3>Web Developement</h3>
             <p>Since high school I've become fascinated with programming. While I staid present with the latest in technology I never really took the leap into object oriented programming.
               More recently, I decided to start my journey by learning full stack web developement through free resources and a web-based <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">bootcamp</a> through Udemy.</p>
             <br>
-            <img src="C:\Users\HR_Laptop_1\Desktop\CSS-My Site\images\startup.png"class="stocks">
+            <img src="startup.png"class="stocks">
             <h3>Quantcubes</h3>
             <p>I'm the founder & CEO of Quantcubes. A simplified but highly effective learning + implementation solution for quantitative traders.
               Our technology utilizes the simplicity of a <a href="https://en.wikipedia.org/wiki/Low-code_development_platform">low-code developement platform</a>,
