--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Nick Sposa</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href=styles.css">
   <link rel="shortcut icon" href="https://img.icons8.com/dusk/64/000000/user.png" type="image">
   <link href="https://fonts.googleapis.com/css?family=Baskervville|Montserrat|Sacramento&display=swap" rel="stylesheet">
 </head>
@@ -28,7 +28,7 @@
       <h2>Hello.</h2>
       <p>Sales & Marketing analyst at <a href="http://northbeachvillageresort.com/">North Beach Village Resorts</a>, Research analyst at <a href="http://www.pancapital.com/">Pan Capital</a>.
         In my spare time I conduct <a href="https://seekingalpha.com/author/fourth-green-investments#regular_articles">stock research</a>, work on <a href="https://github.com/nsposa/quant_cubes.git">Quantcubes</a>, and answer questions on <a
-          href="https://www.quora.com/profile/Nick-Sposa-1">Quora</a>. My eventual goal is to become proficient in web developement</a>  </p>
+          href="https://www.quora.com/profile/Nick-Sposa-1">Quora</a>. My eventual goal is to become proficient in web developement.</a>  </p>
     </div>
 
 
@@ -40,14 +40,11 @@
           <img class="mypic" src="nickpic.png">
 
           <h2>About</h2>
-          <p>I'm a confessed life-long learner and autodidact. Initially, I started my journey outside of academia, in the field of value Investing. While mastery has and will continue to be evasive, value investing is an area I will work on
-            throughout my career. Aside from the life lessons learned, being mostly self-taught has allowed me to create mental models of how businesses operate. Another improvement that I've seen from honing my research skills is in the area of my
-            learn-ability. I've realized some of the best ways to leapfrog learning hurdles in much shorter time frames. These methods are what give me the template necessary to master other diverse areas of deep technical expertise.<br><br> My goal
-            for
-            this page over the next 1-2 years is to catalog my learning trek. The start of my journey will be in the area of web development. Starting Dec 1, 2019, I enrolled in the Udacity Bootcamp taught by Angela Yu. My end goal is to prove that
-            someone with an average academic background can teach themselves the skills necessary to stay competitive in an ever-evolving technological landscape. In order of importance, my plan of attack is 1. Web development 2. Data science
-            (including Python, R, Tableau, SQL), and 3. Get hired at a startup in web dev or a VC fund. While the bar has been set extremely high for years 1-2 of Ultralearning, I won't be deterred from achieving success. In the meantime, I will be
-            working my day job and helping to create a few, tech-related, startups. </p>
+          <p>I'm a confessed life-long learner and autodidact. Initially, I started my journey outside of academia, in the field of value Investing. While mastery has, and will continue to be evasive, value investing is an area where I find
+            great passion. Being mostly self-taught has allowed me to create a bespoke toolbox of mental models that aid my understanding of the world. These methods are what gives me the template necessary to master other diverse areas of deep technical expertise that I'm exploring currentlyin the near future.<br><br>
+            My goal for this page over the next 1-2 years is to catalog my learning trek. My end goal is to prove that using a self-taught approach can lead to tremendous self-developement. In order of importance, my plan of attack is 1. Web development 2. Data science
+            (including Python, R, Tableau, SQL), and 3. Get hired at a startup in web dev or at a VC fund. While the bar has been set extremely high for years 1-2 of Ultralearning, I have set a clear path to proficiency. In the meantime, I will be
+            working at my day job, and leading the charge at my startup, Quantcubes. </p>
 
 
           <div class="skill-row2">
@@ -75,7 +72,7 @@
       <hr>
 
       <h2>Get In Touch</h2>
-      <p>Find me at any of the following links. .</p>
+      <p>Find me at any of the following links.</p>
       <a class="footer-link" href="https://quora.com/profile/Nick-Sposa-1/">Quora</a>
       <a class="footer-link" href="https://github.com/nsposa/">Github</a>
       <a class="footer-link" href="https://github.com/nsposa/quant_cubes.git">Website</a>
